--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <header class="masthead">
-  <h1 class="masthead-title">
-    <a href="{{ site.baseurl }}/">{{ site.name }}<span>&#39;s blog</span></a>
+  <h1 class="masthead-title--small">
+    <a href="{{ site.baseurl }}/">{{ site.name }}<span></span></a>
   </h1>
   <nav class="masthead-nav">
     {% for nav in site.nav %}
@@ -11,17 +11,19 @@ layout: default
     {% endfor %}
   </nav>
 </header>
-<div class="content list">
+<div class="">
 {% if site.posts.size == 0 %}
   <h2>No post found</h2>
 {% else %}
 {% for post in site.posts %}
+<time>{{ post.date | date_to_string }}</time>
+<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
   <div class="list-item">
     <h2 class="list-post-title">
-      <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+      
     </h2>
     <div class="list-post-date">
-      <time>{{ post.date | date_to_string }}</time>
+      
     </div>
   </div>
 {% endfor %}
